<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/text_min_height"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Broken_Document_No"
                android:gravity="center_vertical"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_broken_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/Margin_5dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/broken_record_date"
                android:gravity="center_vertical"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_broken_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/Margin_5dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/broken_state"
            android:gravity="center_vertical"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_broken_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/Margin_5dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/broken_remark"
            android:gravity="center_vertical"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_broken_remark"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/Margin_5dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/Margin_5dp"
            android:textSize="15sp"
            />

    </LinearLayout>


</LinearLayout>